--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
 		<h2>Productivity: the Website</h2> <i>Where things get done</i>
 	</div>
 	<div id="content">
-		<img src="bioimg.jpg" style="float:left; height:25%; width:25%">
+		<img src="bioimg.jpg" style="float:left; height:25%; width:25%; margin: 10px">
 		<h2 style="text-align:center">About Me</h2>
 		<p style="display:inline; text-align:center;">
 		I am Jared Clements,the creator of this
