--- a/bio.html
+++ b/bio.html
@@ -43,6 +43,9 @@
 		</br></br><b>Bio Page:</b> Here, the use of CSS Style Sheets and HTML create the whole page. The video is embeded.
 		</p>
 	</div>
-
+	<h2>Website Video</h2>
+	<video width="600px" controls>
+		<source src="video.mp4" type="video/mp4">
+	</video>
 </body>
 </html>
